[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
automod = "1.0.13"
clap = { version = "4.4.10", features = ["derive"] }
indoc = "2.0.4"
winnow = "0.5.19"

[lints]
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"
clippy.must_use_candidate = "allow"
clippy.pedantic = "warn"
clippy.use_self = "warn"
