[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
automod = "1.0.13"
clap = { version = "4.4.10", features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into"] }
indoc = "2.0.4"
linkme = "0.3.17"
once_cell = "1.18.0"
rayon = "1.8.0"
regex = "1.10.2"
winnow = "0.5.19"

[lints]
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"
clippy.must_use_candidate = "allow"
clippy.pedantic = "warn"
clippy.use_self = "warn"
