cabal-version: 2.2

name:    advent-of-code
version: 0.0.0.0

common common
  build-depends: base
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
    , bytestring
    , containers
    , generic-lens
    , lens
    , megaparsec
    , parser-combinators
    , relude
    , safe-exceptions
    , split
    , streamly
    , text
    , vector
    , witherable
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    LambdaCase
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    TypeApplications
  exposed-modules:
    AdventOfCode.Core
    AdventOfCode.Main
    AdventOfCode.Parsing
    -- 2018
    AdventOfCode.Year2018.Day1.Part1
    AdventOfCode.Year2018.Day1.Part2
    AdventOfCode.Year2018.Day2.Part1
    AdventOfCode.Year2018.Day2.Part2
    AdventOfCode.Year2018.Day3.Part1
    -- 2019
    AdventOfCode.Year2019.Day1.Part1
    AdventOfCode.Year2019.Day1.Part2
    -- 2020
    AdventOfCode.Year2020.Day1.Part1
    AdventOfCode.Year2020.Day1.Part2
    AdventOfCode.Year2020.Day10.Part1
    AdventOfCode.Year2020.Day2.Part1
    AdventOfCode.Year2020.Day2.Part2
    AdventOfCode.Year2020.Day3.Part1
    AdventOfCode.Year2020.Day3.Part2
    AdventOfCode.Year2020.Day4.Part1
    AdventOfCode.Year2020.Day4.Part2
    AdventOfCode.Year2020.Day5.Part1
    AdventOfCode.Year2020.Day5.Part2
    AdventOfCode.Year2020.Day6.Part1
    AdventOfCode.Year2020.Day6.Part2
    AdventOfCode.Year2020.Day18.Part1
    AdventOfCode.Year2020.Day18.Part2
    -- 2022
    AdventOfCode.Year2022.Day1.Part1
    AdventOfCode.Year2022.Day1.Part2
    AdventOfCode.Year2022.Day2.Part1
    AdventOfCode.Year2022.Day2.Part2
    AdventOfCode.Year2022.Day3.Part1
    AdventOfCode.Year2022.Day3.Part2
    AdventOfCode.Year2022.Day4.Part1
    AdventOfCode.Year2022.Day4.Part2
    AdventOfCode.Year2022.Day5.Part1
    AdventOfCode.Year2022.Day5.Part2

executable advent-of-code
  import:
    , common
    , executable
  main-is: src/Main.hs
  build-depends: advent-of-code
