cabal-version: 3.6

name:    advent-of-code
version: 0.0.0.0

common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  default-language: GHC2021
  default-extensions:
    , BlockArguments
    , DeriveAnyClass
    , DerivingStrategies
    , DerivingVia
    , LambdaCase
    , OverloadedRecordDot
    , OverloadedStrings
    , StrictData
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
    , bytestring
    , hedgehog
    , optparse-applicative
    , string-interpolate
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , text
  exposed-modules:
    , AdventOfCode
    , AdventOfCode.Year2023.Day01.Part1

executable advent-of-code
  import:
    , common
    , executable
  main-is: src/Main.hs
  build-depends: advent-of-code

test-suite test
  import:
    , common
    , executable
  type: exitcode-stdio-1.0
  main-is: src/Test.hs
  build-depends: advent-of-code
