[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2018"

[dependencies]
once_cell = "1.8.0"
rayon = "1.5.1"
regex = "1.5.4"

################################################################################
# 2019
################################################################################

[[bin]]
name = "2019-1-1"
path = "2019/1-1.rs"

[[bin]]
name = "2019-1-2"
path = "2019/1-2.rs"

[[bin]]
name = "2019-2-1"
path = "2019/2-1.rs"

################################################################################
# 2020
################################################################################

[[bin]]
name = "2020-7-1"
path = "2020/7-1.rs"

[[bin]]
name = "2020-7-2"
path = "2020/7-2.rs"

[[bin]]
name = "2020-8-1"
path = "2020/8-1.rs"

[[bin]]
name = "2020-8-2"
path = "2020/8-2.rs"

[[bin]]
name = "2020-9-1"
path = "2020/9-1.rs"

[[bin]]
name = "2020-9-2"
path = "2020/9-2.rs"

[[bin]]
name = "2020-10-1"
path = "2020/10-1.rs"

################################################################################
# 2020
################################################################################

[[bin]]
name = "2021-1-1"
path = "2021/1-1.rs"

[[bin]]
name = "2021-1-2"
path = "2021/1-2.rs"

[[bin]]
name = "2021-2-1"
path = "2021/2-1.rs"

[[bin]]
name = "2021-2-2"
path = "2021/2-2.rs"

[[bin]]
name = "2021-3-1"
path = "2021/3-1.rs"