[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
automod = "1.0.14"
clap = { version = "4.5.21", features = ["derive"] }
derive_more = { version = "1.0.0", default-features = false, features = ["from", "into"] }
enum-iterator = "2.1.0"
flagset = "0.4.6"
flume = "0.11.1"
indoc = "2.0.5"
linkme = "0.3.31"
once_cell = "1.20.2"
rayon = "1.10.0"
regex = "1.11.1"
winnow = "0.6.20"

[lints]
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"
clippy.must_use_candidate = "allow"
clippy.pedantic = { level = "warn", priority = -1 }
clippy.use_self = "warn"
