cabal-version: 3.0

name:    advent-of-code
version: 0.0.0.0


common common
  build-depends:
    , base   ^>= 4.13.0
    , relude ^>= 0.7.0
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
  default-language: Haskell2010
  default-extensions:
    , BlockArguments
    , DeriveAnyClass
    , DeriveFunctor
    , DeriveGeneric
    , DerivingStrategies
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups
    -threaded
    -rtsopts
    -with-rtsopts=-N


common kitchen-sink
  build-depends:
    , array
    , async
    , bytestring
    , containers
    , deepseq
    , megaparsec
    , mtl
    , primitive
    , random
    , relude
    , streamly
    , string-interpolate
    , text
    , unordered-containers
    , vector


common streamly-optimizations
  ghc-options:
    -O2
    -fdicts-strict
    -fmax-worker-args=16
    -fspec-constr-recursive=16


common splint
  build-depends: splint
  ghc-options: -fplugin=Splint


executable 1-1
  import:
    , common
    , kitchen-sink
    , streamly-optimizations
    , splint
  main-is: 1-1.hs
  build-depends:
    , streamly
    , text
