cabal-version: 3.0

name:    advent-of-code
version: 0.0.0.0


--------------------------------------------------------------------------------
-- Common
--------------------------------------------------------------------------------


common common
  build-depends:
    , base   ^>= 4.13.0
    , relude ^>= 0.7.0
  mixins:
    , base hiding (Prelude)
    , relude
        ( Relude as Prelude
        , Relude.Extra.Bifunctor
        , Relude.Unsafe
        )
  default-language: Haskell2010
  default-extensions:
    , BlockArguments
    , DeriveAnyClass
    , DeriveFunctor
    , DeriveGeneric
    , DerivingStrategies
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups
    -threaded
    -rtsopts
    -with-rtsopts=-N


common streamly-optimizations
  ghc-options:
    -O2
    -fdicts-strict
    -fmax-worker-args=16
    -fspec-constr-recursive=16


common splint
  build-depends: splint
  ghc-options: -fplugin=Splint


common kitchen-sink
  import:
    , common
    , streamly-optimizations
    , splint
  build-depends:
    , array
    , async
    , bytestring
    , containers
    , deepseq
    , megaparsec
    , mtl
    , primitive
    , random
    , relude
    , streamly
    , string-interpolate
    , text
    , unordered-containers
    , vector


--------------------------------------------------------------------------------
-- Executables
--------------------------------------------------------------------------------


executable 1-1
  import: kitchen-sink
  main-is: src/1-1.hs


executable 1-2
  import: kitchen-sink
  main-is: src/1-2.hs


executable 2-1
  import: kitchen-sink
  main-is: src/2-1.hs


executable 2-2
  import: kitchen-sink
  main-is: src/2-2.hs


executable 3-1
  import: kitchen-sink
  main-is: src/3-1.hs


executable 3-2
  import: kitchen-sink
  main-is: src/3-2.hs
